[SG-1126] [SG-1832] [SG-1346] [SG-1131] [SG-1790] -- Small css fix tasks (#1583)
* [SG-1126] [SG-1832] [SG-1346] [SG-1131] [SG-1790] -- Small css fix tasks

SG-1131 -- Step by step too narrow on mobile. Adjusted widths and spacings on mobile to line up better and provide more space
SG-1126 -- Removed extra padding on the left side of the "Last updated" line.
SG-1832 -- Fixed spacing between the button and text on Campaign spotlight translations. On english the output wraps the text in a P tag. On the translations, there is no wrapping P tag. Css altered to work with or without the tag
SG-1346 -- Removed icons from Contact information on location sidebar
SG-1790 -- Fixed spacing between paragraphs in different sections of the site, where there was no space between multiple paragraphs

* back out SG-1790 changes (#1592)

---------

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-campaign-spotlight.scss
@@ -81,6 +81,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  row-gap: 1.25rem;
   padding: 40px 20px;
   border-radius: 0 8px 8px 0;
 
@@ -89,7 +90,6 @@
     padding: 3rem;
     min-height: 400px;
     margin-left: 50%;
-    padding: 3rem;
 
     .is-reversed & {
       margin-left: 0;
